--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(src/kits/interface/View.cpp)
+AC_INIT(src/kits/kernel/port.c)
 AC_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
@@ -165,28 +165,6 @@ cosmoe.specs
 headers/Makefile
 src/kits/Makefile
 src/apps/Makefile
-src/apps/bedate/Makefile
-src/apps/guido/Makefile
-src/apps/calc/Makefile
-src/apps/OpenTracker/tracker/Makefile
-src/apps/OpenTracker/deskbar/Makefile
-src/apps/pulse/Makefile
 src/apps/testharness/Makefile
 src/apps/osutils/Makefile
-src/servers/registrar/Makefile
-src/servers/app/Makefile
-src/add-ons/Makefile
-src/add-ons/translators/Makefile
-src/add-ons/translators/bmptranslator/Makefile
-src/add-ons/translators/pngtranslator/Makefile
 ])
-
-dnl add-ons/translators/jpg2000translator/Makefile
-dnl add-ons/translators/jpgtranslator/Makefile
-dnl add-ons/translators/libtifftranslator/Makefile
-dnl add-ons/translators/pngtranslator/Makefile
-dnl add-ons/translators/ppmtranslator/Makefile
-dnl add-ons/translators/sgitranslator/Makefile
-dnl add-ons/translators/stxttranslator/Makefile
-dnl add-ons/translators/tgatranslator/Makefile
-dnl add-ons/translators/tifftranslator/Makefile
