--- a/src/kits/Makefile.in
+++ b/src/kits/Makefile.in
@@ -9,7 +9,7 @@ CPPFLAGS = $(CFLAGS) -Woverloaded-virtual -Wno-ctor-dtor-privacy -Wnon-virtual-d
 
 LIBNAME = libcosmoe.@LIBEXT@
 
-VPATH += ./ support kernel
+VPATH += ./ support kernel storage
 
 KERNEL_KIT_OBJS = area.o direntfd.o misc.o	real_time_clock.o \
 atomic.o fs.o parsedate.o sem.o dirent.o image.o \
@@ -19,10 +19,19 @@ SUPPORT_KIT_OBJS = Archivable.o BufferedDataIO.o  Flattenable.o  Referenceable.o
 ArchivingManagers.o BufferIO.o	StopWatch.o ByteOrder.o List.o String.o \
 Beep.o DataIO.o Locker.o StringList.o BlockCache.o DateTime.o PointerList.o Url.o
 
+STORAGE_KIT_OBJS = AppFileInfo.o MimeType.o	ResourcesContainer.o \
+Directory.o Node.o Resources.o Entry.o NodeInfo.o	ResourceStrings.o \
+EntryList.o NodeMonitor.o File.o OffsetFile.o Statable.o \
+FilePanel.o Path.o storage_support.o FindDirectory.o Query.o \
+SymLink.o kernel_interface.POSIX.o  QueryPredicate.o	Volume.o \
+mime ResourceFile.o VolumeRoster.o Mime.o ResourceItem.o
+
+
 CC	= @CC@
 
 OBJS += $(KERNEL_KIT_OBJS)
 OBJS += $(SUPPORT_KIT_OBJS)
+OBJS += $(STORAGE_KIT_OBJS)
 
 OBJDIR	:= objs
 
