Port kernel, storage and support kits over libroot syscalls
* Slightly changed libroot for kernel interface translation.
* Reimplementation of Haiku kernel internals on top of linux.
* LinuxVolume and dev_t emulation not working still.

--- a/cosmoe.specs.in
+++ b/cosmoe.specs.in
@@ -25,6 +25,7 @@
 -I@ABS_TOPDIR@/headers/private/system/
 -I@ABS_TOPDIR@/headers/private/system/arch/x86/
 -I@ABS_TOPDIR@/headers/private/system/linux_kernel/
+-I@ABS_TOPDIR@/headers/private/runtime_loader/
 
 -I@ABS_TOPDIR@/headers/posix/
 
