--- a/src/system/Makefile.in
+++ b/src/system/Makefile.in
@@ -10,25 +10,22 @@ CPPFLAGS = $(CFLAGS) -Woverloaded-virtual -Wno-ctor-dtor-privacy -Wnon-virtual-d
 
 LIBNAME = libroot.@LIBEXT@
 
+
 VPATH += libroot/ libroot/os libroot/posix \
-kernel_linux/os kernel_linux/os/fs kernel_linux/os/fs/volume/ kernel_linux/os/fs2
+kernel_linux/os kernel_linux/os/fs kernel_linux/os/fs/volume/
 
 #fs_attr.o
 LIBROOT_OBJS = libroot_init.o area.o image.o  port.o  sem.o  team.o  thread.o \
 fs_query.o  fs_volume.o fs_info.o  fs_index.o find_directory.o \
 stat.o parsedate.o
 
-#kernel_fs_attr.o
-LINUX_KERNEL_OBJS = kernel_area.o kernel_sem.o  \
-kernel_port.o kernel_thread.o kernel_image.o kernel_watch.o kernel_team.o \
-kernel_missing_imp.o real_time_clock.o \
+LINUX_KERNEL_OBJS = kernel_area.o kernel_sem.o kernel_port.o kernel_thread.o \
+kernel_image.o kernel_watch.o kernel_team.o kernel_missing_imp.o real_time_clock.o \
 libc.o system.o atomic.o byteorder.o LinuxVolume.o
 
-#kernel_fs_attr.o fs2.o fs_pos.o
 LINUX_KERNEL_FS_OBJS = kernel_fs_volume.o kernel_fs_query.o kernel_fs_index.o \
-kernel_fs_info.o dir.o
+kernel_fs_info.o fs.o fs_attr_untyped.o fs_descriptors.o dir.o
 
-LINUX_KERNEL_FS2_OBJS = fs.o fs_attr_untyped.o fs_descriptors.o
 
 CC = @CC@
 
