system: Fix glue code

--- a/src/system/Makefile.in
+++ b/src/system/Makefile.in
@@ -14,18 +14,17 @@ LIBNAME = libroot.@LIBEXT@
 VPATH += libroot/ libroot/os libroot/os/locks libroot/posix \
 kernel_linux/os kernel_linux/os/fs kernel_linux/os/fs/volume/
 
-#fs_attr.o
+#fs_attr.o  debug.o time.o scheduler.o memory.o wait_for_objects.o
 LIBROOT_OBJS = libroot_init.o \
 area.o fs_info.o parsedate.o team.o \
 atomic.o fs_query.o port.o thread.o \
-debug.o fs_volume.o scheduler.o time.o \
-find_directory.o image.o sem.o wait_for_objects.o \
-fs_attr.o system_info.o \
-fs_index.o memory.o system_revision.o
+ fs_volume.o  \
+find_directory.o image.o sem.o \
+fs_index.o  system_revision.o stat.o system_info.o
 
 LINUX_KERNEL_OBJS = kernel_area.o kernel_sem.o kernel_port.o kernel_thread.o \
 kernel_image.o kernel_watch.o kernel_team.o kernel_missing_imp.o real_time_clock.o \
-libc.o system.o atomic.o byteorder.o LinuxVolume.o
+libc.o system.o kernel_atomic.o byteorder.o LinuxVolume.o
 
 LINUX_KERNEL_FS_OBJS = kernel_fs_volume.o kernel_fs_query.o kernel_fs_index.o \
 kernel_fs_info.o fs.o fs_attr_untyped.o fs_descriptors.o dir.o
