fs: Fix dev_t volume emulation

--- a/src/system/Makefile.in
+++ b/src/system/Makefile.in
@@ -25,7 +25,7 @@ fs_index.o system_revision.o stat.o system_info.o debug.o
 LINUX_KERNEL_OBJS = kernel_area.o kernel_sem.o kernel_port.o kernel_thread.o \
 kernel_image.o kernel_watch.o kernel_team.o kernel_missing_imp.o real_time_clock.o \
 kernel_memory.o kernel_scheduler.o kernel_time.o kernel_wait_for_objects.o \
-kernel_debug.o libc.o system.o kernel_atomic.o byteorder.o LinuxVolume.o
+kernel_debug.o libc.o system.o kernel_atomic.o byteorder.o LinuxVolume.o \
 
 LINUX_KERNEL_FS_OBJS = kernel_fs_volume.o kernel_fs_query.o kernel_fs_index.o \
 kernel_fs_info.o fs.o fs_attr_untyped.o fs_descriptors.o dir.o
@@ -36,7 +36,6 @@ CC = @CC@
 OBJS += $(LIBROOT_OBJS)
 OBJS += $(LINUX_KERNEL_OBJS)
 OBJS += $(LINUX_KERNEL_FS_OBJS)
-OBJS += $(LINUX_KERNEL_FS2_OBJS)
 
 OBJDIR	:= @top_srcdir@/objs
 
