--- a/src/kits/storage/CMakeLists.txt
+++ b/src/kits/storage/CMakeLists.txt
@@ -3,31 +3,24 @@ target_sources(be PRIVATE
 	AddOnMonitor.cpp
 	AddOnMonitorHandler.cpp
 	AppFileInfo.cpp
-	CopyEngine.cpp
 	Directory.cpp
-	DriverSettings.cpp
 	Entry.cpp
 	EntryList.cpp
-	EntryOperationEngineBase.cpp
-	FdIO.cpp
 	File.cpp
 	FileDescriptorIO.cpp
 	FileIO.cpp
 	FindDirectory.cpp
-	#MergedDirectory.cpp
 	Mime.cpp
 	MimeType.cpp
 	Node.cpp
 	NodeInfo.cpp
 	NodeMonitor.cpp
-	NodeMonitorHandler.cpp
+	#NodeMonitorHandler.cpp
 	OffsetFile.cpp
 	Path.cpp
-	PathFinder.cpp
-	PathMonitor.cpp
+	#PathMonitor.cpp
 	Query.cpp
 	QueryPredicate.cpp
-	RemoveEngine.cpp
 	ResourceFile.cpp
 	ResourceItem.cpp
 	ResourcesContainer.cpp
@@ -39,24 +32,8 @@ target_sources(be PRIVATE
 	Volume.cpp
 	VolumeRoster.cpp
 
-	mime/AppMetaMimeCreator.cpp
-	mime/AssociatedTypes.cpp
-	mime/Database.cpp
-	mime/DatabaseDirectory.cpp
-	mime/DatabaseLocation.cpp
 	mime/database_support.cpp
-	mime/InstalledTypes.cpp
-	mime/MimeEntryProcessor.cpp
-	mime/MimeInfoUpdater.cpp
-	mime/MimeSnifferAddon.cpp
-	mime/MimeSnifferAddonManager.cpp
-	mime/MimeSniffer.cpp
-	mime/SnifferRules.cpp
-	mime/Supertype.cpp
-	mime/SupportingApps.cpp
-	mime/TextSnifferAddon.cpp
 
-	sniffer/CharStream.cpp
 	sniffer/DisjList.cpp
 	sniffer/Err.cpp
 	sniffer/Parser.cpp
