Buildsystem: General fixes

--- a/src/apps/osutils/CMakeLists.txt
+++ b/src/apps/osutils/CMakeLists.txt
@@ -1,8 +1,11 @@
-
 add_executable(portinfo
 	portinfo.cpp
 )
 
+target_link_libraries(portinfo PRIVATE be root freetype agg icon linprog)
+
 add_executable(seminfo
 	seminfo.cpp
 )
+
+target_link_libraries(seminfo PRIVATE be root)
