--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_library(be SHARED "")
-target_link_libraries(be PRIVATE
-    "-Wl,--whole-archive"
-    "-Wl,--no-whole-archive"
-)
+#target_link_libraries(be PRIVATE
+#    "-Wl,--whole-archive"
+#    "-Wl,--no-whole-archive"
+#)
 file(GLOB_RECURSE privateHeaderFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 target_sources(be PRIVATE
     ${headerFiles}
@@ -10,8 +10,8 @@ target_sources(be PRIVATE
 )
 set_target_properties(be PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(be PRIVATE root)
-target_link_libraries(be PRIVATE icu)
+target_link_libraries(be PRIVATE root linprog agg icu)
+target_link_libraries(be PRIVATE icon)
 
 add_subdirectory(app)
 add_subdirectory(interface)
