--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(system)
 add_subdirectory(kits)
 add_subdirectory(libs)
 add_subdirectory(servers)
-#add_subdirectory(apps)
+
+add_subdirectory(apps)
 
 #add_subdirectory(tests)
