--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/icu-cmake"]
 	path = external/icu-cmake
-	url = https://github.com/viaduck/icu-cmake.git
+	url = https://github.com/Barrett17/icu-cmake.git
