--- a/src/apps/osutils/CMakeLists.txt
+++ b/src/apps/osutils/CMakeLists.txt
@@ -2,7 +2,7 @@ add_executable(portinfo
 	portinfo.cpp
 )
 
-target_link_libraries(portinfo PRIVATE be root freetype agg icon linprog)
+target_link_libraries(portinfo PRIVATE be root)
 
 add_executable(seminfo
 	seminfo.cpp
