--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -4,20 +4,22 @@
 #target_compile_definitions(root_bootstrap PRIVATE -DLIBBE_BOOTSTRAP=1)
 
 add_library(root SHARED "")
-#target_link_libraries(root PUBLIC binder)
+
 target_link_libraries(root PRIVATE
     "-Wl,--whole-archive"
     "-Wl,--no-whole-archive"
 )
+
 file(GLOB_RECURSE privateHeaderFiles "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
+
 target_sources(root PRIVATE
     ${headerFiles}
     ${privateHeaderFiles}
 )
+
 set_target_properties(root PROPERTIES LINKER_LANGUAGE CXX)
 
-target_link_libraries(root PUBLIC dl)
-target_link_libraries(root PUBLIC pthread)
+target_link_libraries(root PUBLIC dl pthread)
 
 add_subdirectory(kernel_linux)
 add_subdirectory(libroot)
