--- a/src/apps/osutils/CMakeLists.txt
+++ b/src/apps/osutils/CMakeLists.txt
@@ -4,8 +4,17 @@ add_executable(portinfo
 
 target_link_libraries(portinfo PRIVATE be root)
 
+target_include_directories(portinfo PRIVATE
+	"../../../headers/private/libroot/"
+)
+
+
 add_executable(seminfo
 	seminfo.cpp
 )
 
 target_link_libraries(seminfo PRIVATE be root)
+
+target_include_directories(seminfo PRIVATE
+	"../../../headers/private/libroot/"
+)
