--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -19,7 +19,7 @@ target_link_libraries(be PRIVATE root linprog icon agg icu)
 add_subdirectory(app)
 add_subdirectory(interface)
 add_subdirectory(locale)
-add_subdirectory(network)
+#add_subdirectory(network)
 add_subdirectory(shared)
 add_subdirectory(storage)
 add_subdirectory(support)
