app_server: Introduce initial FBDev backend

--- a/src/servers/app/CMakeLists.txt
+++ b/src/servers/app/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -iquote ${PROJECT_SOURCE_DIR}/src/server
 
 target_include_directories(app_server PUBLIC
 	"./drawing"
+	"./drawing/interface/linux"
 	"./drawing/interface/local"
 	"./drawing/interface/remote"
 	"./font"
@@ -119,8 +120,11 @@ target_sources(app_server PRIVATE
 	#drawing/interface/remote/RemoteMessage.cpp
 	#drawing/interface/remote/StreamingRingBuffer.cpp
 
-	drawing/interface/local/AccelerantBuffer.cpp
-	drawing/interface/local/AccelerantHWInterface.cpp
+	#drawing/interface/local/AccelerantBuffer.cpp
+	#drawing/interface/local/AccelerantHWInterface.cpp
+
+	drawing/interface/linux/FBDevHWInterface.cpp
+	drawing/interface/linux/FBDevBuffer.cpp
 
 	stackandtile/SATDecorator.cpp
 	stackandtile/SATGroup.cpp
