--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -18,4 +18,6 @@ add_subdirectory(locale)
 add_subdirectory(shared)
 add_subdirectory(storage)
 add_subdirectory(support)
+add_subdirectory(textencoding)
+add_subdirectory(translation)
 #add_subdirectory(tracker)
