libroot: Add send_signal and extended_system_info

--- a/src/system/libroot/os/CMakeLists.txt
+++ b/src/system/libroot/os/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(root PRIVATE
 	atomic.c
 	debug.c
 	driver_settings.cpp
+	extended_system_info.cpp
 	find_directory.cpp
 	find_paths.cpp
 	#fs_attr.cpp
@@ -12,7 +13,6 @@ target_sources(root PRIVATE
 	fs_query.cpp
 	fs_volume.c
 	image.cpp
-	locks
 	memory.cpp
 	parsedate.cpp
 	port.c
