--- a/src/kits/CMakeLists.txt
+++ b/src/kits/CMakeLists.txt
@@ -12,6 +12,7 @@ set_target_properties(be PROPERTIES LINKER_LANGUAGE CXX)
 target_link_libraries(be PUBLIC root linprog icon agg icu)
 
 add_subdirectory(app)
+add_subdirectory(game)
 add_subdirectory(interface)
 add_subdirectory(locale)
 #add_subdirectory(network)
@@ -20,4 +21,4 @@ add_subdirectory(storage)
 add_subdirectory(support)
 add_subdirectory(textencoding)
 add_subdirectory(translation)
-#add_subdirectory(tracker)
+add_subdirectory(tracker)
